# Graph-Creator-Application

./: README.md  WidgetsApp.sln
WidgetsAp/: CMakeLists.txt
WidgetsApp/: 55.gra  66.gra  77.gra  88.gra  WidgetsApp.vcxproj  WidgetsApp.vcxproj.filters
WidgetsApp/src/: cApp.cpp  cApp.h  cControlPanel.cpp  cControlPanel.h  cDisplay.cpp  cDisplay.h  cGraph.cpp  cGraph.h  cMain.cpp  cMain.h  cOpenGLObjects.cpp  cOpenGLObjects.h  cPCH.cpp  cPCH.h  cPalleteDialog.cpp  cPalleteDialog.h  cTestDialog.cpp  cTestDialog.h
WidgetsApp/src/assets/shaders/: Line_Shader.glsl  Texture_Shader.glsl
